@@ -1,1 +1,56 @@
 # E-Commerce
+
+
+## Java open source e-commerce software
+
+Shopping cart
+Catalogue
+Search
+Checkout
+Administration
+REST API
+
+#### Get the code:
+Clone the repository:
+
+If this is your first time using Github, review http://help.github.com to learn the basics.
+
+## To build the application:
+From the command line with Maven installed:
+
+$ cd shopizer
+$ mvmw clean install
+Run the application from Tomcat
+copy sm-shop/target/ROOT.war to tomcat or any other application server deployment dir
+
+Increase heap space to 1024 m
+
+Heap space configuration in Tomcat:
+If you are using Tomcat, edit catalina.bat for windows users or catalina.sh for linux / Mac users
+
+#### in Windows
+set JAVA_OPTS="-Xms1024m -Xmx1024m -XX:MaxPermSize=256m" 
+
+#### in Linux / Mac
+export JAVA_OPTS="-Xms1024m -Xmx1024m -XX:MaxPermSize=256m" 
+Run the application from Spring boot
+   $ cd sm-shop 
+   $ mvmw spring-boot:run
+Run the application from Spring boot in eclipse
+
+## Run as Java Application
+
+Access the application:
+Access the deployed web application at: http://localhost:8080/
+
+Acces the admin section at: http://localhost:8080/admin
+
+username : saad@triangeltech.com
+
+password : AdminSaad
+
+The instructions above will let you run the application with default settings and configurations. Please read the instructions on how to connect to MySQL, configure an email server and configure other subsystems
+
+
+## Participation:
+If you have interest in giving feedback or for participating to Shopizer project in any way Feel to use the contact form https://triangeltech.com/contact/ and share your email address so we can send an invite to our Slack channel
